style="text-align: justify;"

--- a/Arjayeng.html
+++ b/Arjayeng.html
@@ -142,8 +142,8 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">Arjayeng</h1>
-                    <p>Leader Manufacture for Oil and Hydrocarbon in water Measuring</p>
-                    <p>Laboratory Oil in Water Monitor Solvent extraction qualifies sample to ISO 9377-2 and EPA 1664 Rev A methods</p>
+                    <p style="text-align: justify;">Leader Manufacture for Oil and Hydrocarbon in water Measuring</p>
+                    <p style="text-align: justify;">Laboratory Oil in Water Monitor Solvent extraction qualifies sample to ISO 9377-2 and EPA 1664 Rev A methods</p>
                 </div>
             </div>
         </div>
