--- a/Arjayeng_AR.html
+++ b/Arjayeng_AR.html
@@ -143,7 +143,7 @@
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                 <p class="d-inline-block border rounded-pill py-1 px-4" dir="rtl">الشركة</p>
                 <h1 class="mb-4" dir="rtl">Arjayeng</h1>
-                <p dir="rtl">الشركة الرائدة في تصنيع أجهزة قياس الزيت والهيدروكربونات في الماء</p>
+                <p style="text-align: justify;" dir="rtl">الشركة الرائدة في تصنيع أجهزة قياس الزيت والهيدروكربونات في الماء</p>
                 <p>جهاز قياس الزيت في الماء المخبري يستخدم طريقة الاستخلاص بالمذيبات لتأهيل العينة وفقاً للمعايير ISO 9377-2 و EPA 1664 Rev A</p>
             </div>
         </div>
