--- a/Chemetrics.html
+++ b/Chemetrics.html
@@ -140,8 +140,8 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">Chemetrics</h1>
-                    <p>CHEMetrics was founded in 1969 by Gordon Rampy. Our extensive product line of water and wastewater testing kits is based on his original invention, the self-filling reagent ampoule, that allows analysts to conduct colorimetric water analysis with greatly increased simplicity, convenience, speed and safety, both on-site and in the laboratory.</p>
-                    <p>We’ve grown rapidly thanks to the development of new products and applications, our novel proprietary manufacturing techniques, and the immediate acceptance of the self-filling ampoule seen in the marketplace. We also credit our employees. Their deep loyalty to each other and what we stand for makes us who we are. A number of our earlier employees are still active in the daily workings of the company.</p>
+                    <p style="text-align: justify;">CHEMetrics was founded in 1969 by Gordon Rampy. Our extensive product line of water and wastewater testing kits is based on his original invention, the self-filling reagent ampoule, that allows analysts to conduct colorimetric water analysis with greatly increased simplicity, convenience, speed and safety, both on-site and in the laboratory.</p>
+                    <p style="text-align: justify;">We’ve grown rapidly thanks to the development of new products and applications, our novel proprietary manufacturing techniques, and the immediate acceptance of the self-filling ampoule seen in the marketplace. We also credit our employees. Their deep loyalty to each other and what we stand for makes us who we are. A number of our earlier employees are still active in the daily workings of the company.</p>
                 </div>
             </div>
         </div>
