--- a/Chemetrics_AR.html
+++ b/Chemetrics_AR.html
@@ -144,8 +144,8 @@
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                 <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
                 <h1 class="mb-4">Chemetrics</h1>
-                <p>تأسست CHEMetrics في عام 1969 بواسطة جوردون رامبي. تعتمد سلسلة منتجاتنا الواسعة من مجموعات اختبار مياه الصرف الصحي والمياه على اختراعه الأصلي، الأمبولة الذاتية التعبئة، التي تتيح للمحللين إجراء تحليل المياه اللوني بسهولة وراحة وسرعة وأمان متزايدين، سواء في الموقع أو في المختبر.</p>
-                <p>لقد نمينا بسرعة بفضل تطوير منتجات وتطبيقات جديدة، وتقنيات التصنيع الحصرية المبتكرة لدينا، والقبول الفوري للأمبولة الذاتية التعبئة الموجودة في السوق. نحن نعزو الفضل أيضًا لموظفينا. إن ولائهم العميق لبعضهم البعض ولما نمثله يجعلنا من نحن. عدد من موظفينا الأوائل لا يزالون نشطين في الأعمال اليومية للشركة.</p>
+                <p style="text-align: justify;">تأسست CHEMetrics في عام 1969 بواسطة جوردون رامبي. تعتمد سلسلة منتجاتنا الواسعة من مجموعات اختبار مياه الصرف الصحي والمياه على اختراعه الأصلي، الأمبولة الذاتية التعبئة، التي تتيح للمحللين إجراء تحليل المياه اللوني بسهولة وراحة وسرعة وأمان متزايدين، سواء في الموقع أو في المختبر.</p>
+                <p style="text-align: justify;">لقد نمينا بسرعة بفضل تطوير منتجات وتطبيقات جديدة، وتقنيات التصنيع الحصرية المبتكرة لدينا، والقبول الفوري للأمبولة الذاتية التعبئة الموجودة في السوق. نحن نعزو الفضل أيضًا لموظفينا. إن ولائهم العميق لبعضهم البعض ولما نمثله يجعلنا من نحن. عدد من موظفينا الأوائل لا يزالون نشطين في الأعمال اليومية للشركة.</p>
             </div>
         </div>
     </div>
