--- a/Davis.html
+++ b/Davis.html
@@ -140,9 +140,9 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">Davis</h1>
-                    <p>Davis Instruments was founded in 1963 by two engineers, Bob Davis and Stan Lehr. The company is based in Hayward, California, USA, and has grown to become a leading manufacturer of weather stations, marine and automotive products, and other instruments for monitoring the environment. </p>
-                    <p>Initially, Davis Instruments focused on developing and manufacturing products for the marine industry, including navigational instruments and accessories for boating enthusiasts. Over time, the company expanded its product line to include weather monitoring equipment, becoming well-known for its high-quality, accurate, and durable weather stations suitable for both amateur and professional use.</p>
-                    <p>Davis Instruments' weather stations, notably the Vantage Vue and Vantage Pro2, are highly regarded in the market for their precision, reliability, and range of features. These products are designed to meet the needs of a variety of users, from home weather enthusiasts and gardeners to farmers, researchers, and educational institutions.</p>
+                    <p style="text-align: justify;">Davis Instruments was founded in 1963 by two engineers, Bob Davis and Stan Lehr. The company is based in Hayward, California, USA, and has grown to become a leading manufacturer of weather stations, marine and automotive products, and other instruments for monitoring the environment. </p>
+                    <p style="text-align: justify;">Initially, Davis Instruments focused on developing and manufacturing products for the marine industry, including navigational instruments and accessories for boating enthusiasts. Over time, the company expanded its product line to include weather monitoring equipment, becoming well-known for its high-quality, accurate, and durable weather stations suitable for both amateur and professional use.</p>
+                    <p style="text-align: justify;">Davis Instruments' weather stations, notably the Vantage Vue and Vantage Pro2, are highly regarded in the market for their precision, reliability, and range of features. These products are designed to meet the needs of a variety of users, from home weather enthusiasts and gardeners to farmers, researchers, and educational institutions.</p>
                 </div>
             </div>
         </div>
