--- a/Davis_AR.html
+++ b/Davis_AR.html
@@ -143,9 +143,9 @@
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir ="rtl">
                 <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
                 <h1 class="mb-4">Davis</h1>
-                <p>تأسست شركة Davis Instruments في عام 1963 على يد مهندسين هما بوب ديفيس وستان لير. تقع الشركة في هايوارد، كاليفورنيا، الولايات المتحدة الأمريكية، وقد نمت لتصبح رائدة في تصنيع محطات الأرصاد الجوية، ومنتجات البحرية والسيارات، وغيرها من الأدوات لمراقبة البيئة.</p>
-                <p>في البداية، ركزت Davis Instruments على تطوير وتصنيع المنتجات لصناعة البحرية، بما في ذلك الأدوات الملاحية والإكسسوارات لعشاق القوارب. مع مرور الوقت، قامت الشركة بتوسيع خط منتجاتها لتشمل معدات مراقبة الطقس، وأصبحت معروفة جيدًا بمحطات الطقس عالية الجودة والدقيقة والمتينة المناسبة للاستخدام الهاوي والمحترف على حد سواء.</p>
-                <p>تحظى محطات الطقس التي تنتجها Davis Instruments، وخاصة Vantage Vue و Vantage Pro2، بتقدير كبير في السوق لدقتها وموثوقيتها ومجموعة ميزاتها. تم تصميم هذه المنتجات لتلبية احتياجات مجموعة متنوعة من المستخدمين، من عشاق الطقس المنزليين والبستانيين إلى المزارعين والباحثين والمؤسسات التعليمية.</p>
+                <p style="text-align: justify;">تأسست شركة Davis Instruments في عام 1963 على يد مهندسين هما بوب ديفيس وستان لير. تقع الشركة في هايوارد، كاليفورنيا، الولايات المتحدة الأمريكية، وقد نمت لتصبح رائدة في تصنيع محطات الأرصاد الجوية، ومنتجات البحرية والسيارات، وغيرها من الأدوات لمراقبة البيئة.</p>
+                <p style="text-align: justify;">في البداية، ركزت Davis Instruments على تطوير وتصنيع المنتجات لصناعة البحرية، بما في ذلك الأدوات الملاحية والإكسسوارات لعشاق القوارب. مع مرور الوقت، قامت الشركة بتوسيع خط منتجاتها لتشمل معدات مراقبة الطقس، وأصبحت معروفة جيدًا بمحطات الطقس عالية الجودة والدقيقة والمتينة المناسبة للاستخدام الهاوي والمحترف على حد سواء.</p>
+                <p style="text-align: justify;">تحظى محطات الطقس التي تنتجها Davis Instruments، وخاصة Vantage Vue و Vantage Pro2، بتقدير كبير في السوق لدقتها وموثوقيتها ومجموعة ميزاتها. تم تصميم هذه المنتجات لتلبية احتياجات مجموعة متنوعة من المستخدمين، من عشاق الطقس المنزليين والبستانيين إلى المزارعين والباحثين والمؤسسات التعليمية.</p>
             </div>
         </div>
     </div>
