--- a/Kester_AR.html
+++ b/Kester_AR.html
@@ -143,9 +143,9 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                     <p class="d-inline-block border rounded-pill py-1 px-4"> عن الشركة</p>
                     <h1 class="mb-4">Kestrel</h1>
-                    <p>البيانات المناخية التي كان يوفرها جهاز قياس سرعة الرياح والطقس اليدوي من Kestrel كانت في السابق تتطلب معدات مكلفة تشغل مساحة كبيرة. اليوم، أصبحت أجهزة قياس سرعة الرياح ومتابعة الطقس من Kestrel صغيرة بحجم الهاتف المحمول - وتكلف تقريبًا نفس الثمن. أجهزة Kestrel قوية، مقاومة للعناصر، وحتى تطفو في الماء.</p>
-                    <p>أجهزة قياس الرياح والطقس اليدوية هي بوابتك إلى عالم الظواهر الجوية المتغير باستمرار. جهاز قياس الرياح مثل Kestrel 3000 سيخبرك بكل ما تحتاج لمعرفته حول سرعة الرياح، ودرجة الحرارة، حتى معلومات الرطوبة والضغط الحراري. أجهزة قياس الطقس المتقدمة مثل Kestrel 5500 تتبع ما يقرب من 20 معامل طقس مختلف، ويمكن تسجيل البيانات لتحليلها لاحقًا.</p>
-                    <p>النطاق الاستثنائي لاستخدامات أجهزة Kestrel جعلها معدات مطلوبة في مجموعة واسعة من الإعدادات المهنية. رجال الإطفاء، والمزارعون، وفنيو HVAC والرماة على مسافات طويلة حول العالم لديهم أجهزة قياس سرعة الرياح والطقس من Kestrel لجمع بيانات الطقس الدقيقة والفورية. صنعت في الولايات المتحدة الأمريكية، مضادة للماء، تطفو، ومدعومة بضمان لمدة 5 سنوات.</p>
+                    <p style="text-align: justify;">البيانات المناخية التي كان يوفرها جهاز قياس سرعة الرياح والطقس اليدوي من Kestrel كانت في السابق تتطلب معدات مكلفة تشغل مساحة كبيرة. اليوم، أصبحت أجهزة قياس سرعة الرياح ومتابعة الطقس من Kestrel صغيرة بحجم الهاتف المحمول - وتكلف تقريبًا نفس الثمن. أجهزة Kestrel قوية، مقاومة للعناصر، وحتى تطفو في الماء.</p>
+                    <p style="text-align: justify;">أجهزة قياس الرياح والطقس اليدوية هي بوابتك إلى عالم الظواهر الجوية المتغير باستمرار. جهاز قياس الرياح مثل Kestrel 3000 سيخبرك بكل ما تحتاج لمعرفته حول سرعة الرياح، ودرجة الحرارة، حتى معلومات الرطوبة والضغط الحراري. أجهزة قياس الطقس المتقدمة مثل Kestrel 5500 تتبع ما يقرب من 20 معامل طقس مختلف، ويمكن تسجيل البيانات لتحليلها لاحقًا.</p>
+                    <p style="text-align: justify;">النطاق الاستثنائي لاستخدامات أجهزة Kestrel جعلها معدات مطلوبة في مجموعة واسعة من الإعدادات المهنية. رجال الإطفاء، والمزارعون، وفنيو HVAC والرماة على مسافات طويلة حول العالم لديهم أجهزة قياس سرعة الرياح والطقس من Kestrel لجمع بيانات الطقس الدقيقة والفورية. صنعت في الولايات المتحدة الأمريكية، مضادة للماء، تطفو، ومدعومة بضمان لمدة 5 سنوات.</p>
                 </div>
             </div>
         </div>
