--- a/Tisch_AR.html
+++ b/Tisch_AR.html
@@ -143,9 +143,9 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                     <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
 <h1 class="mb-4">Tisch</h1>
-<p>تعتبر شركة Tisch Environmental معيارًا لمعدات أخذ عينات الهواء بكميات كبيرة والجزيئات والمعادن والمركبات الطيارة والمراقبة المتخصصة. منذ تأسيس الشركة في عام 1954 باسم General Metal Works، توسعت خطوط منتجاتنا من أول جهاز أخذ عينات هواء بحجم كبير لتشمل أجهزة أخذ العينات الفنية والمخصصة. عملاؤنا هم محترفون من كل قطاع في الأسواق التنظيمية والصناعية.</p>
-<p>نحن الخبراء في أخذ عينات الهواء بكميات كبيرة، أخذ عينات الرصاص، أجهزة أخذ عينات الرصاص، مراقبة الجزيئات، انبعاثات الجزيئات، مراقبة المبيدات، أخذ عينات المبيدات، الجزيئات العالقة الكلية، أجهزة أخذ عينات الجزيئات، الطريقة المرجعية الفيدرالية PM-10، الطريقة المرجعية الفيدرالية PM2.5، طريقة EPA TO-4A، طريقة EPA TO-9A، طريقة EPA TO-13A، والمزيد.</p>
-<p>TEI هي عمل عائلي يقع في قرية Cleves، أوهايو. توظف TEI أفرادًا مهرة يتمتعون بخبرة تزيد عن 20 عامًا لكل منهم في تصميم وتصنيع ودعم معدات مراقبة تلوث الهواء. جعلت مصنعنا المجهز جيدًا وفلسفتنا في الجودة وخبرتنا من TEI المورد المفضل لمعدات مراقبة تلوث الهواء. الآن، وبينما نعمل على الجيل الرابع، لدى TEI قدرات تصنيع على أحدث طراز وتتطلع إلى احتياجات المحترفين البيئيين اليوم.</p>
+<p style="text-align: justify;">تعتبر شركة Tisch Environmental معيارًا لمعدات أخذ عينات الهواء بكميات كبيرة والجزيئات والمعادن والمركبات الطيارة والمراقبة المتخصصة. منذ تأسيس الشركة في عام 1954 باسم General Metal Works، توسعت خطوط منتجاتنا من أول جهاز أخذ عينات هواء بحجم كبير لتشمل أجهزة أخذ العينات الفنية والمخصصة. عملاؤنا هم محترفون من كل قطاع في الأسواق التنظيمية والصناعية.</p>
+<p style="text-align: justify;">نحن الخبراء في أخذ عينات الهواء بكميات كبيرة، أخذ عينات الرصاص، أجهزة أخذ عينات الرصاص، مراقبة الجزيئات، انبعاثات الجزيئات، مراقبة المبيدات، أخذ عينات المبيدات، الجزيئات العالقة الكلية، أجهزة أخذ عينات الجزيئات، الطريقة المرجعية الفيدرالية PM-10، الطريقة المرجعية الفيدرالية PM2.5، طريقة EPA TO-4A، طريقة EPA TO-9A، طريقة EPA TO-13A، والمزيد.</p>
+<p style="text-align: justify;">TEI هي عمل عائلي يقع في قرية Cleves، أوهايو. توظف TEI أفرادًا مهرة يتمتعون بخبرة تزيد عن 20 عامًا لكل منهم في تصميم وتصنيع ودعم معدات مراقبة تلوث الهواء. جعلت مصنعنا المجهز جيدًا وفلسفتنا في الجودة وخبرتنا من TEI المورد المفضل لمعدات مراقبة تلوث الهواء. الآن، وبينما نعمل على الجيل الرابع، لدى TEI قدرات تصنيع على أحدث طراز وتتطلع إلى احتياجات المحترفين البيئيين اليوم.</p>
  </div>
             </div>
         </div>
