--- a/about.html
+++ b/about.html
@@ -140,12 +140,12 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">About Us</p>
                     <h1 class="mb-4">Why You Should Trust Us? Get Know About Us!</h1>
-                    <p>is one of the specialized companies that implements integrated scientific and environmental applications and engineering services for customers by a group of engineers and experts in scientific and environmental fields.</p>
-                    <p>
+                    <p style="text-align: justify;">is one of the specialized companies that implements integrated scientific and environmental applications and engineering services for customers by a group of engineers and experts in scientific and environmental fields.</p>
+                    <p style="text-align: justify;">
                         The office was established in 2008 .
                     </p>
-                    <p>More detailed information about the services, achievements, and milestones of the company. This part can include success stories, testimonials, partnerships, and any additional services or unique selling points that the company offers.</p>
-                    <p>
+                    <p style="text-align: justify;">More detailed information about the services, achievements, and milestones of the company. This part can include success stories, testimonials, partnerships, and any additional services or unique selling points that the company offers.</p>
+                    <p style="text-align: justify;">
                         The activity of our office is to provide technical support and technical and scientific consultancy and integrated engineering through the import and supply of all environmental and scientific devices which selection of the largest international companies that manufacture such devices and we have representatives in Egypt.
                     </p>
                     <p>
@@ -167,7 +167,7 @@
                     <div class="p-lg-5 ps-lg-0">
                         <p class="d-inline-block border rounded-pill text-light py-1 px-4">Features</p>
                         <h1 class="text-white mb-4">Why Choose Us</h1>
-                        <p class="text-white mb-4 pb-2">
+                        <p  style="text-align: justify;" class="text-white mb-4 pb-2">
                             Al-Nada Scientific Office provides this supported by a number of professionals and experts working in the largest research centers in Egypt. And behind it a group of skilled engineers to do the work of installation, maintenance, and repair.
                         </p>
                         <div class="row g-4">
