--- a/about_AR.html
+++ b/about_AR.html
@@ -144,12 +144,12 @@
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                 <p class="d-inline-block border rounded-pill py-1 px-4">معلومات عنا</p>
                 <h1 class="mb-4">لماذا يجب أن تثق بنا؟ تعرف على المزيد عنا!</h1>
-                <p style="font-size: 1.1rem;">مكتب الندى العلمي هو واحد من الشركات الرائدة والمتخصصة في المنطقة، والتي تلتزم بتقديم تطبيقات علمية وبيئية متكاملة وخدمات هندسية متميزة لعملائها. نحن نفخر بفريق عملنا المكون من مهندسين متخصصين وخبراء في المجالات العلمية والبيئية، الذين يعملون بلا كلل لتوفير حلول مبتكرة تلبي احتياجات العملاء وتتجاوز توقعاتهم.</p>
-                <p style="font-size: 1.1rem;">لدينا خبرة واسعة في تنفيذ مشاريع متنوعة تشمل مجموعة واسعة من التطبيقات، بدءًا من توريد معدات القياس والتحكم للمصانع وخطوط الإنتاج، وصولاً إلى تقديم حلول للمختبرات تشمل الأواني الزجاجية والمواد الكيميائية. نحن ملتزمون بالابتكار والجودة، ونسعى دائمًا لاستخدام أحدث التقنيات لضمان تحقيق أفضل النتائج.</p>
-                <p style="font-size: 1.1rem;">تتميز خدماتنا بالمرونة والقدرة على التكيف مع متطلبات كل مشروع بشكل فريد، ونحن نؤمن بأهمية التواصل المستمر مع عملائنا لضمان فهم احتياجاتهم بعمق وتقديم الدعم الكامل على مدار مراحل المشروع. إن شغفنا بالعلوم والتكنولوجيا، مع التزامنا بالتميز والابتكار، يجعل من مكتب الندى العلمي شريكك المثالي لتحقيق أهدافك العلمية والبيئية.</p>
-                <p style="font-size: 1.1rem;">تأسس المكتب في عام 2008.</p>
-                <p style="font-size: 1.1rem;">معلومات أكثر تفصيلاً عن الخدمات والإنجازات والأحداث البارزة للشركة. يمكن أن يشمل هذا الجزء قصص نجاح، وشهادات، وشراكات، وأي خدمات إضافية أو نقاط بيع فريدة تقدمها الشركة.</p>
-                <p style="font-size: 1.1rem;">نشاط مكتبنا يتمثل في تقديم الدعم الفني والاستشارات الفنية والعلمية والهندسية المتكاملة من خلال استيراد وتوفير جميع الأجهزة البيئية والعلمية والتي يتم اختيار أكبر الشركات الدولية التي تصنع مثل هذه الأجهزة ولدينا ممثلين في مصر.</p>
+                <p style="text-align: justify;" style="font-size: 1.1rem;">مكتب الندى العلمي هو واحد من الشركات الرائدة والمتخصصة في المنطقة، والتي تلتزم بتقديم تطبيقات علمية وبيئية متكاملة وخدمات هندسية متميزة لعملائها. نحن نفخر بفريق عملنا المكون من مهندسين متخصصين وخبراء في المجالات العلمية والبيئية، الذين يعملون بلا كلل لتوفير حلول مبتكرة تلبي احتياجات العملاء وتتجاوز توقعاتهم.</p>
+                <p style="text-align: justify;" style="font-size: 1.1rem;">لدينا خبرة واسعة في تنفيذ مشاريع متنوعة تشمل مجموعة واسعة من التطبيقات، بدءًا من توريد معدات القياس والتحكم للمصانع وخطوط الإنتاج، وصولاً إلى تقديم حلول للمختبرات تشمل الأواني الزجاجية والمواد الكيميائية. نحن ملتزمون بالابتكار والجودة، ونسعى دائمًا لاستخدام أحدث التقنيات لضمان تحقيق أفضل النتائج.</p>
+                <p style="text-align: justify;" style="font-size: 1.1rem;">تتميز خدماتنا بالمرونة والقدرة على التكيف مع متطلبات كل مشروع بشكل فريد، ونحن نؤمن بأهمية التواصل المستمر مع عملائنا لضمان فهم احتياجاتهم بعمق وتقديم الدعم الكامل على مدار مراحل المشروع. إن شغفنا بالعلوم والتكنولوجيا، مع التزامنا بالتميز والابتكار، يجعل من مكتب الندى العلمي شريكك المثالي لتحقيق أهدافك العلمية والبيئية.</p>
+                <p style="text-align: justify;" style="font-size: 1.1rem;">تأسس المكتب في عام 2008.</p>
+                <p style="text-align: justify;" style="font-size: 1.1rem;">معلومات أكثر تفصيلاً عن الخدمات والإنجازات والأحداث البارزة للشركة. يمكن أن يشمل هذا الجزء قصص نجاح، وشهادات، وشراكات، وأي خدمات إضافية أو نقاط بيع فريدة تقدمها الشركة.</p>
+                <p style="text-align: justify;" style="font-size: 1.1rem;">نشاط مكتبنا يتمثل في تقديم الدعم الفني والاستشارات الفنية والعلمية والهندسية المتكاملة من خلال استيراد وتوفير جميع الأجهزة البيئية والعلمية والتي يتم اختيار أكبر الشركات الدولية التي تصنع مثل هذه الأجهزة ولدينا ممثلين في مصر.</p>
                 <p style="font-size: 1.1rem;">يسعدنا أن نضع جميع إمكانيات المكتب في خدمة عملائنا الكرام.</p>
                 <p style="font-size: 1.1rem;"><i class="far fa-check-circle text-primary me-3"></i>حلول علمية وبيئية متكاملة</p>
                 <p style="font-size: 1.1rem;"><i class="far fa-check-circle text-primary me-3"></i>توفير معدات القياس والتحكم في المصانع وخطوط الإنتاج</p>
@@ -168,7 +168,7 @@
                     <div class="p-lg-5 ps-lg-0" style="direction: rtl; text-align: right;">
                         <p class="d-inline-block border rounded-pill text-light py-1 px-4">المميزات</p>
                         <h1 class="text-white mb-4">لماذا تختارنا</h1>
-                        <p class="text-white mb-4 pb-2">
+                        <p style="text-align: justify;" class="text-white mb-4 pb-2">
                             يوفر مكتب الندى العلمي خدماته بدعم من نخبة من المحترفين والخبراء العاملين في أكبر مراكز البحث في مصر، ويقف خلفه فريق من المهندسين المهرة للقيام بأعمال التركيب والصيانة والإصلاح. نحن نتميز بالخبرة الطويلة والتخصص في تقديم حلول بيئية متكاملة، مع التزامنا بأعلى معايير الجودة والابتكار في جميع خدماتنا.
                         </p>
                         <div class="row g-4">
