--- a/aeroqaul.html
+++ b/aeroqaul.html
@@ -141,7 +141,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">Aeroqaul</h1>
-                    <p>Leader in “indicative” real-time monitoring,of common outdoor and indoor air pollutants Founded in 2001 - New Zealand </p>
+                    <p style="text-align: justify;">Leader in “indicative” real-time monitoring,of common outdoor and indoor air pollutants Founded in 2001 - New Zealand </p>
                   
                 </div>
             </div>
