--- a/aeroqaul_AR.html
+++ b/aeroqaul_AR.html
@@ -143,7 +143,7 @@
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s"dir="rtl">
                 <p class="d-inline-block border rounded-pill py-1 px-4" dir="rtl">عن الشركة</p>
                 <h1 class="mb-4" dir="rtl">Aeroqual</h1>
-                <p dir="rtl">الرائدة في مراقبة جودة الهواء الداخلي والخارجي "الإشارية" في الوقت الحقيقي، تأسست في عام 2001 - نيوزيلندا.</p>
+                <p style="text-align: justify;" dir="rtl">الرائدة في مراقبة جودة الهواء الداخلي والخارجي "الإشارية" في الوقت الحقيقي، تأسست في عام 2001 - نيوزيلندا.</p>
             </div>
         </div>
     </div>
