--- a/casella.html
+++ b/casella.html
@@ -141,8 +141,8 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">Casella</h1>
-                    <p>Casella is dedicated to reducing occupational and environmental health risks through effective monitoring solutions. Casella prides itself on providing precision instrumentation since 1799, supplying eminent figures including David Livingstone and Charles Darwin with instrumentation for exploration and scientific work. </p>
-                    <p>Casella offers smart and easy to use solutions for monitoring noise, dust and vibration.  Our continuing innovation and training support ensure the next generation have the latest technology and expertise to aid health risk measurement.</p>
+                    <p style="text-align: justify;">Casella is dedicated to reducing occupational and environmental health risks through effective monitoring solutions. Casella prides itself on providing precision instrumentation since 1799, supplying eminent figures including David Livingstone and Charles Darwin with instrumentation for exploration and scientific work. </p>
+                    <p style="text-align: justify;">Casella offers smart and easy to use solutions for monitoring noise, dust and vibration.  Our continuing innovation and training support ensure the next generation have the latest technology and expertise to aid health risk measurement.</p>
                   
                 </div>
             </div>
