--- a/casella_AR.html
+++ b/casella_AR.html
@@ -144,8 +144,8 @@
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                 <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
                 <h1 class="mb-4">Casella</h1>
-                <p>تلتزم شركة Casella بتقليل المخاطر الصحية المهنية والبيئية من خلال حلول المراقبة الفعالة. تفخر Casella بتقديم أدوات دقيقة منذ عام 1799، وقد قدمت لشخصيات بارزة بما في ذلك ديفيد ليفينجستون وتشارلز داروين أدوات للتنقيب والعمل العلمي.</p>
-                <p>تقدم Casella حلول ذكية وسهلة الاستخدام لمراقبة الضوضاء والغبار والاهتزاز. تضمن ابتكاراتنا المستمرة ودعم التدريب أن تمتلك الأجيال القادمة أحدث التقنيات والخبرة لقياس المخاطر الصحية.</p>
+                <p style="text-align: justify;">تلتزم شركة Casella بتقليل المخاطر الصحية المهنية والبيئية من خلال حلول المراقبة الفعالة. تفخر Casella بتقديم أدوات دقيقة منذ عام 1799، وقد قدمت لشخصيات بارزة بما في ذلك ديفيد ليفينجستون وتشارلز داروين أدوات للتنقيب والعمل العلمي.</p>
+                <p style="text-align: justify;">تقدم Casella حلول ذكية وسهلة الاستخدام لمراقبة الضوضاء والغبار والاهتزاز. تضمن ابتكاراتنا المستمرة ودعم التدريب أن تمتلك الأجيال القادمة أحدث التقنيات والخبرة لقياس المخاطر الصحية.</p>
             </div>
         </div>
     </div>
