--- a/critical_AR.html
+++ b/critical_AR.html
@@ -144,8 +144,8 @@
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                 <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
                 <h1 class="mb-4">Critical Environment Technologies</h1>
-                <p>تعد شركة Critical Environment Technologies Canada Inc. (CETCI) شركة متخصصة في تصميم وتصنيع أنظمة كشف الغازات، بما في ذلك أجهزة كشف الغازات الثابتة وحلول مراقبة جودة الهواء الداخلي (IAQ). تم تصميم هذه المنتجات لكشف مجموعة من الغازات مثل أول أكسيد الكربون، ثاني أكسيد النيتروجين، المبردات، ومركبات عضوية متطايرة (VOCs)، من بين غيرها. تُستخدم حلولهم في تطبيقات متنوعة، بما في ذلك الأسواق التجارية والصناعية والمؤسسية والسكنية.</p>
-                <p>غالبًا ما تُستخدم منتجات CETCI في البيئات التي يُعد فيها كشف الغازات الخطرة أمرًا حيويًا للسلامة والامتثال، بما في ذلك مرائب السيارات، مصانع التبريد، المطابخ التجارية، وأنظمة التدفئة والتهوية وتكييف الهواء، لذكر بعض الأمثلة. يمكن لأنظمتهم توفير مراقبة في الوقت الفعلي وهي مصممة لتنبيه الأفراد إلى مستويات خطرة محتملة من الغازات السامة أو القابلة للاشتعال أو المبردات، مما يحمي الأشخاص والأصول، ويضمن الامتثال لمعايير السلامة.</p>
+                <p style="text-align: justify;">تعد شركة Critical Environment Technologies Canada Inc. (CETCI) شركة متخصصة في تصميم وتصنيع أنظمة كشف الغازات، بما في ذلك أجهزة كشف الغازات الثابتة وحلول مراقبة جودة الهواء الداخلي (IAQ). تم تصميم هذه المنتجات لكشف مجموعة من الغازات مثل أول أكسيد الكربون، ثاني أكسيد النيتروجين، المبردات، ومركبات عضوية متطايرة (VOCs)، من بين غيرها. تُستخدم حلولهم في تطبيقات متنوعة، بما في ذلك الأسواق التجارية والصناعية والمؤسسية والسكنية.</p>
+                <p style="text-align: justify;">غالبًا ما تُستخدم منتجات CETCI في البيئات التي يُعد فيها كشف الغازات الخطرة أمرًا حيويًا للسلامة والامتثال، بما في ذلك مرائب السيارات، مصانع التبريد، المطابخ التجارية، وأنظمة التدفئة والتهوية وتكييف الهواء، لذكر بعض الأمثلة. يمكن لأنظمتهم توفير مراقبة في الوقت الفعلي وهي مصممة لتنبيه الأفراد إلى مستويات خطرة محتملة من الغازات السامة أو القابلة للاشتعال أو المبردات، مما يحمي الأشخاص والأصول، ويضمن الامتثال لمعايير السلامة.</p>
             </div>
         </div>
     </div>
