--- a/ecom.html
+++ b/ecom.html
@@ -140,9 +140,9 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">Ecom</h1>
-                    <p>Established 1985 in Iserlohn – Oestrich, Germany
+                    <p style="text-align: justify;">Established 1985 in Iserlohn – Oestrich, Germany
                         Ecom is specialized in the development, production and distribution of ECOM portable flue gas analysers.</p>
-                    <p>ecom stands since more than 30 years for innovative, high-quality instruments for combustion gas analysis, pressure measurement, leak detection as well as for burner diagnosis. The development and the production occur on basis of the most updated standards, legal requirements and as a consequent reaction on customer wishes exclusively in Germany. It can therefore be pretended that products distributed under the brand ecom® are „Made in Germany“.</p>
+                    <p style="text-align: justify;">ecom stands since more than 30 years for innovative, high-quality instruments for combustion gas analysis, pressure measurement, leak detection as well as for burner diagnosis. The development and the production occur on basis of the most updated standards, legal requirements and as a consequent reaction on customer wishes exclusively in Germany. It can therefore be pretended that products distributed under the brand ecom® are „Made in Germany“.</p>
                    
                 </div>
             </div>
