--- a/geotech.html
+++ b/geotech.html
@@ -140,7 +140,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">Geotech</h1>
-                    <p>QED Environmental Systems was established in 1982. Since our inception we have been a leading manufacturer of environmental monitoring and remediation equipment. </p>
+                    <p style="text-align: justify;">QED Environmental Systems was established in 1982. Since our inception we have been a leading manufacturer of environmental monitoring and remediation equipment. </p>
                   
                 </div>
             </div>
