--- a/geotech_AR.html
+++ b/geotech_AR.html
@@ -143,7 +143,7 @@
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                 <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
                 <h1 class="mb-4">جيوتك</h1>
-                <p>تأسست شركة QED Environmental Systems في عام 1982. منذ تأسيسنا، كنا من الشركات الرائدة في تصنيع معدات رصد وتصحيح البيئة.</p>
+                <p style="text-align: justify;">تأسست شركة QED Environmental Systems في عام 1982. منذ تأسيسنا، كنا من الشركات الرائدة في تصنيع معدات رصد وتصحيح البيئة.</p>
             </div>
         </div>
     </div>
