--- a/gigahertz.html
+++ b/gigahertz.html
@@ -140,9 +140,9 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">Gigahertz</h1>
-                    <p>Leading edge developer and producer of broadband EMF-/RF measurement technology.
+                    <p style="text-align: justify;">Leading edge developer and producer of broadband EMF-/RF measurement technology.
                        </p>
-                    <p>Relied-on by building biologists worldwide since more than two decades.</p>
+                    <p style="text-align: justify;">Relied-on by building biologists worldwide since more than two decades.</p>
 
                 </div>
             </div>
