--- a/gigahertz_AR.html
+++ b/gigahertz_AR.html
@@ -143,9 +143,9 @@
             <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                 <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
                 <h1 class="mb-4">جيجاهرتز</h1>
-                <p>مطور ومنتج رائد في تكنولوجيا قياس EMF-/RF واسعة النطاق.
+                <p style="text-align: justify;">مطور ومنتج رائد في تكنولوجيا قياس EMF-/RF واسعة النطاق.
                    </p>
-                <p>معتمد من قبل علماء البيولوجيا البنائية حول العالم لأكثر من عقدين.</p>
+                <p style="text-align: justify;">معتمد من قبل علماء البيولوجيا البنائية حول العالم لأكثر من عقدين.</p>
 
             </div>
         </div>
