--- a/kitagawa_AR.html
+++ b/kitagawa_AR.html
@@ -144,7 +144,7 @@
                     <div class="col-lg-12 wow fadeIn" data-wow-delay="0.1s" dir ="rtl">
                         <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
                         <h1 class="mb-4">Kitagawa</h1>
-                        <p>تشتهر شركة Kitagawa بحلولها المبتكرة في تكنولوجيا كشف الغازات، حيث تتخصص في إنتاج أنابيب كاشفات الغاز عالية الجودة والمضخات اليدوية. تُعرف أنظمتهم بدقتها وموثوقيتها وسهولة استخدامها، وتقدم مجموعة شاملة من المنتجات المصممة لكشف وقياس مجموعة واسعة من الغازات والأبخرة في بيئات مختلفة. مع التزام قوي بضمان سلامة مكان العمل ورصد البيئة، تخدم Kitagawa العديد من الصناعات، بما في ذلك البتروكيماويات والبيئة والصحة المهنية والسلامة. إن التزام الشركة بالتميز وتركيزها على توفير أدوات كشف الغازات فعالة وسهلة الاستخدام يجعلها شريكًا موثوقًا به للمحترفين في جميع أنحاء العالم الذين يسعون للتخفيف من المخاطر المرتبطة بتعرض الغاز والحفاظ على معايير عالية من جودة الهواء.</p>
+                        <p style="text-align: justify;">تشتهر شركة Kitagawa بحلولها المبتكرة في تكنولوجيا كشف الغازات، حيث تتخصص في إنتاج أنابيب كاشفات الغاز عالية الجودة والمضخات اليدوية. تُعرف أنظمتهم بدقتها وموثوقيتها وسهولة استخدامها، وتقدم مجموعة شاملة من المنتجات المصممة لكشف وقياس مجموعة واسعة من الغازات والأبخرة في بيئات مختلفة. مع التزام قوي بضمان سلامة مكان العمل ورصد البيئة، تخدم Kitagawa العديد من الصناعات، بما في ذلك البتروكيماويات والبيئة والصحة المهنية والسلامة. إن التزام الشركة بالتميز وتركيزها على توفير أدوات كشف الغازات فعالة وسهلة الاستخدام يجعلها شريكًا موثوقًا به للمحترفين في جميع أنحاء العالم الذين يسعون للتخفيف من المخاطر المرتبطة بتعرض الغاز والحفاظ على معايير عالية من جودة الهواء.</p>
                     </div>
                 </div>
             </div>
