--- a/lovibond.html
+++ b/lovibond.html
@@ -140,7 +140,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">Lovibond</h1>
-                    <p>For over 130 years, Lovibond® has specialized in manufacturing analytical products for water quality and color. We are proud to offer testing solutions to our customers in over 160 countries. From easy-to-use visual test kits to complex spectrophotometers, we are confident that you can find a testing solution that fits your accuracy and budget requirements.</p>
+                    <p style="text-align: justify;">For over 130 years, Lovibond® has specialized in manufacturing analytical products for water quality and color. We are proud to offer testing solutions to our customers in over 160 countries. From easy-to-use visual test kits to complex spectrophotometers, we are confident that you can find a testing solution that fits your accuracy and budget requirements.</p>
                     
                    
                 </div>
