--- a/lovibond_AR.html
+++ b/lovibond_AR.html
@@ -143,7 +143,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                     <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
                     <h1 class="mb-4">Lovibond</h1>
-                    <p>لأكثر من 130 عامًا، تخصصت Lovibond® في تصنيع المنتجات التحليلية لجودة الماء ولونه. نحن فخورون بتقديم حلول الاختبار لعملائنا في أكثر من 160 دولة. من مجموعات الاختبار البصرية سهلة الاستخدام إلى الأطياف الضوئية المعقدة، نحن واثقون من أنك ستجد حلاً للاختبار يناسب متطلبات الدقة والميزانية لديك.</p>
+                    <p style="text-align: justify;">لأكثر من 130 عامًا، تخصصت Lovibond® في تصنيع المنتجات التحليلية لجودة الماء ولونه. نحن فخورون بتقديم حلول الاختبار لعملائنا في أكثر من 160 دولة. من مجموعات الاختبار البصرية سهلة الاستخدام إلى الأطياف الضوئية المعقدة، نحن واثقون من أنك ستجد حلاً للاختبار يناسب متطلبات الدقة والميزانية لديك.</p>
 
                    
                 </div>
