--- a/perfect.html
+++ b/perfect.html
@@ -140,8 +140,8 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">Perfect Prime</h1>
-                    <p>Perfect Prime aims to provide affordable, reliable tools and devices for both professionals and hobbyists in fields such as home inspection, HVAC (heating, ventilation, and air conditioning), construction, and DIY home repairs. </p>
-                    <p>n terms of environmental monitoring, Perfect Prime might offer devices that measure air quality, including levels of particulate matter, volatile organic compounds (VOCs), temperature, and humidity. These devices can be used in homes, offices, and other indoor spaces to ensure a healthy and comfortable environment by monitoring factors that can affect air quality and comfort.</p>
+                    <p style="text-align: justify;">Perfect Prime aims to provide affordable, reliable tools and devices for both professionals and hobbyists in fields such as home inspection, HVAC (heating, ventilation, and air conditioning), construction, and DIY home repairs. </p>
+                    <p style="text-align: justify;">n terms of environmental monitoring, Perfect Prime might offer devices that measure air quality, including levels of particulate matter, volatile organic compounds (VOCs), temperature, and humidity. These devices can be used in homes, offices, and other indoor spaces to ensure a healthy and comfortable environment by monitoring factors that can affect air quality and comfort.</p>
                 </div>
             </div>
         </div>
