--- a/perfect_AR.html
+++ b/perfect_AR.html
@@ -143,8 +143,8 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                     <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
 <h1 class="mb-4">Perfect Prime</h1>
-<p>تهدف Perfect Prime إلى توفير أدوات وأجهزة موثوقة بأسعار معقولة لكل من المحترفين والهواة في مجالات مثل فحص المنازل، وتدفئة وتهوية وتكييف الهواء (HVAC)، والبناء، وإصلاحات المنزل اليدوية.</p>
-<p>فيما يتعلق بالرصد البيئي، قد تقدم Perfect Prime أجهزة تقيس جودة الهواء، بما في ذلك مستويات الجسيمات، والمركبات العضوية المتطايرة (VOCs)، ودرجة الحرارة، والرطوبة. يمكن استخدام هذه الأجهزة في المنازل، والمكاتب، وغيرها من الأماكن الداخلية لضمان بيئة صحية ومريحة من خلال مراقبة العوامل التي يمكن أن تؤثر على جودة الهواء والراحة.</p>
+<p style="text-align: justify;">تهدف Perfect Prime إلى توفير أدوات وأجهزة موثوقة بأسعار معقولة لكل من المحترفين والهواة في مجالات مثل فحص المنازل، وتدفئة وتهوية وتكييف الهواء (HVAC)، والبناء، وإصلاحات المنزل اليدوية.</p>
+<p style="text-align: justify;">فيما يتعلق بالرصد البيئي، قد تقدم Perfect Prime أجهزة تقيس جودة الهواء، بما في ذلك مستويات الجسيمات، والمركبات العضوية المتطايرة (VOCs)، ودرجة الحرارة، والرطوبة. يمكن استخدام هذه الأجهزة في المنازل، والمكاتب، وغيرها من الأماكن الداخلية لضمان بيئة صحية ومريحة من خلال مراقبة العوامل التي يمكن أن تؤثر على جودة الهواء والراحة.</p>
  </div>
             </div>
         </div>
