--- a/senko.html
+++ b/senko.html
@@ -140,7 +140,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">Senko</h1>
-                    <p>Senko Co., Ltd. is a company known for its expertise in developing and manufacturing gas sensors and related safety equipment. The company is based in South Korea and has garnered international recognition for its contributions to gas detection technology. Senko operates in various sectors, including industrial safety, environmental monitoring, and home safety, providing solutions that help protect people and assets from hazardous gases. </p>
+                    <p style="text-align: justify;">Senko Co., Ltd. is a company known for its expertise in developing and manufacturing gas sensors and related safety equipment. The company is based in South Korea and has garnered international recognition for its contributions to gas detection technology. Senko operates in various sectors, including industrial safety, environmental monitoring, and home safety, providing solutions that help protect people and assets from hazardous gases. </p>
                 </div>
             </div>
         </div>
