--- a/senko_AR.html
+++ b/senko_AR.html
@@ -143,7 +143,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                     <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
 <h1 class="mb-4">Senko</h1>
-<p>شركة Senko Co., Ltd. هي شركة معروفة بخبرتها في تطوير وتصنيع أجهزة استشعار الغازات والمعدات الأمنية ذات الصلة. تقع الشركة في كوريا الجنوبية وقد حازت على اعتراف دولي بفضل مساهماتها في تكنولوجيا كشف الغازات. تعمل Senko في قطاعات متنوعة، بما في ذلك السلامة الصناعية، والرصد البيئي، والسلامة المنزلية، موفرة حلولاً تساعد في حماية الأشخاص والأصول من الغازات الخطرة.</p>
+<p style="text-align: justify;">شركة Senko Co., Ltd. هي شركة معروفة بخبرتها في تطوير وتصنيع أجهزة استشعار الغازات والمعدات الأمنية ذات الصلة. تقع الشركة في كوريا الجنوبية وقد حازت على اعتراف دولي بفضل مساهماتها في تكنولوجيا كشف الغازات. تعمل Senko في قطاعات متنوعة، بما في ذلك السلامة الصناعية، والرصد البيئي، والسلامة المنزلية، موفرة حلولاً تساعد في حماية الأشخاص والأصول من الغازات الخطرة.</p>
 </div>
             </div>
         </div>
