--- a/ten.html
+++ b/ten.html
@@ -141,12 +141,12 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">TEN</h1>
-                    <p>Ten Automotive is a major European Manufacturer and Supplier of Automotive Testing Equipment
+                    <p style="text-align: justify;">Ten Automotive is a major European Manufacturer and Supplier of Automotive Testing Equipment
 
                         & Training. With an extensive range of products and services TEN have become a established as
                         
                         a UK Leading Supplier to the MOT Testing and Vehicle Servicing industry </p>
-                        <p>
+                        <p style="text-align: justify;">
                             With continuing changes in European vehicle testing legislation Ten Automotive has become very active and well established in the field of mandatory vehicle testing throughout Europe with an emphasis on reliability and service support.
                         </p>
                       
