--- a/ten_AR.html
+++ b/ten_AR.html
@@ -143,8 +143,8 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                     <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
 <h1 class="mb-4">TEN</h1>
-<p>TEN Automotive هي شركة رائدة في أوروبا في مجال تصنيع وتوريد معدات اختبار السيارات والتدريب. بمجموعة واسعة من المنتجات والخدمات، أصبحت TEN واحدة من الموردين الرائدين في المملكة المتحدة لصناعة اختبارات MOT وخدمة السيارات</p>
-<p>مع التغيرات المستمرة في تشريعات اختبار السيارات الأوروبية، أصبحت TEN Automotive نشطة جدًا ومؤسسة بشكل جيد في مجال اختبار السيارات الإلزامي في جميع أنحاء أوروبا مع التركيز على الاعتمادية ودعم الخدمة.</p>
+<p style="text-align: justify;">TEN Automotive هي شركة رائدة في أوروبا في مجال تصنيع وتوريد معدات اختبار السيارات والتدريب. بمجموعة واسعة من المنتجات والخدمات، أصبحت TEN واحدة من الموردين الرائدين في المملكة المتحدة لصناعة اختبارات MOT وخدمة السيارات</p>
+<p style="text-align: justify;">مع التغيرات المستمرة في تشريعات اختبار السيارات الأوروبية، أصبحت TEN Automotive نشطة جدًا ومؤسسة بشكل جيد في مجال اختبار السيارات الإلزامي في جميع أنحاء أوروبا مع التركيز على الاعتمادية ودعم الخدمة.</p>
 
                       
                   
