--- a/tenmars.html
+++ b/tenmars.html
@@ -141,11 +141,11 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">Company</p>
                     <h1 class="mb-4">Tenmars</h1>
-                    <p>TENMARS ELECTRONICS CO., LTD. is an ISO-9001 certified manufacturer specializing in the Test and Measurement Instruments. We are located in the Neihu Tech Park in Taipei, Taiwan to serve the worldwide customers. Our R&D team has over 20 years experience in the OEM/ODM projects. We are constantly developing new products to bring Mutual benefits to our customers.</p>
-                    <p>- Design and produce safe, user-friendly, and high quality instruments.</p>
-                    <p>- Produce the high performance digitalized and computerized instruments with the
+                    <p style="text-align: justify;">TENMARS ELECTRONICS CO., LTD. is an ISO-9001 certified manufacturer specializing in the Test and Measurement Instruments. We are located in the Neihu Tech Park in Taipei, Taiwan to serve the worldwide customers. Our R&D team has over 20 years experience in the OEM/ODM projects. We are constantly developing new products to bring Mutual benefits to our customers.</p>
+                    <p style="text-align: justify;">- Design and produce safe, user-friendly, and high quality instruments.</p>
+                    <p style="text-align: justify;">- Produce the high performance digitalized and computerized instruments with the
                         advanced technology and equipments.</p>
-                    <p>- Offer various, reliable and endurable instruments to meet the customer's satisfaction.</p>
+                    <p style="text-align: justify;">- Offer various, reliable and endurable instruments to meet the customer's satisfaction.</p>
                    
                 </div>
             </div>
