--- a/tenmars_AR.html
+++ b/tenmars_AR.html
@@ -144,10 +144,10 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s" dir="rtl">
                     <p class="d-inline-block border rounded-pill py-1 px-4">الشركة</p>
 <h1 class="mb-4">Tenmars</h1>
-<p>شركة TENMARS ELECTRONICS CO., LTD. هي شركة مصنعة معتمدة من ISO-9001 ومتخصصة في أدوات الاختبار والقياس. نحن موجودون في حديقة Neihu Tech في تايبيه، تايوان لخدمة العملاء في جميع أنحاء العالم. يمتلك فريق البحث والتطوير لدينا أكثر من 20 عامًا من الخبرة في مشاريع OEM/ODM. نحن نطور باستمرار منتجات جديدة لجلب فوائد متبادلة لعملائنا.</p>
-<p>- تصميم وإنتاج أدوات آمنة وسهلة الاستخدام وعالية الجودة.</p>
-<p>- إنتاج الأدوات الرقمية والمحوسبة عالية الأداء باستخدام التكنولوجيا والمعدات المتقدمة.</p>
-<p>- تقديم أدوات متنوعة وموثوقة ومتينة لتلبية رضا العميل.</p>
+<p style="text-align: justify;">شركة TENMARS ELECTRONICS CO., LTD. هي شركة مصنعة معتمدة من ISO-9001 ومتخصصة في أدوات الاختبار والقياس. نحن موجودون في حديقة Neihu Tech في تايبيه، تايوان لخدمة العملاء في جميع أنحاء العالم. يمتلك فريق البحث والتطوير لدينا أكثر من 20 عامًا من الخبرة في مشاريع OEM/ODM. نحن نطور باستمرار منتجات جديدة لجلب فوائد متبادلة لعملائنا.</p>
+<p style="text-align: justify;">- تصميم وإنتاج أدوات آمنة وسهلة الاستخدام وعالية الجودة.</p>
+<p style="text-align: justify;">- إنتاج الأدوات الرقمية والمحوسبة عالية الأداء باستخدام التكنولوجيا والمعدات المتقدمة.</p>
+<p style="text-align: justify;">- تقديم أدوات متنوعة وموثوقة ومتينة لتلبية رضا العميل.</p>
 
                 </div>
             </div>
