--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
         <div class="row g-0 align-items-center flex-column-reverse flex-lg-row">
             <div class="col-lg-6 p-5 wow fadeIn" data-wow-delay="0.1s">
                 <h1 class="display-4 text-white mb-5">Al-Nada Scientific Office</h1>
-                <p class="text-white mb-4 pb-2">
+                <p class="text-white mb-4 pb-2" class="fw-bold" style="text-align: justify;">
                     Is the exclusive agent of the reputable international companies that produce
                     Specialized instruments for laboratories and environmental measurements.
                     Moreover, we are their sole representative in Egypt and the Middle East.
@@ -223,7 +223,7 @@
                 <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
                     <p class="d-inline-block border rounded-pill py-1 px-4">About Us</p>
                     <h1 class="mb-4">Why You Should Trust Us? Get Know About Us!</h1>
-                    <p>Al Nada Scientific Office is one of the specialized companies that implements integrated scientific and environmental applications and engineering services for customers by a group of engineers and experts in scientific and environmental fields.</p>
+                    <p style="text-align: justify;">Al Nada Scientific Office is one of the specialized companies that implements integrated scientific and environmental applications and engineering services for customers by a group of engineers and experts in scientific and environmental fields.</p>
                     <p><i class="far fa-check-circle text-primary me-3"></i>Integrated scientific and environmental solutions</p>
                     <p><i class="far fa-check-circle text-primary me-3"></i>Supplying measuring and controlling equipment in factories and production lines</p>
                     <p><i class="far fa-check-circle text-primary me-3"></i>laboratory Equipment, Glassware and Chemicals</p>
@@ -241,7 +241,7 @@
                     <div class="p-lg-5 ps-lg-0">
                         <p class="d-inline-block border rounded-pill text-light py-1 px-4">Features</p>
                         <h1 class="text-white mb-4">Why Choose Us</h1>
-                        <p class="text-white mb-4 pb-2">
+                        <p style="text-align: justify;" class="text-white mb-4 pb-2">
                             Al-Nada Scientific Office provides this supported by a number of professionals and experts working in the largest research centers in Egypt. And behind it a group of skilled engineers to do the work of installation, maintenance, and repair.
                         </p>
                         <div class="row g-4">
