--- a/index_AR.html
+++ b/index_AR.html
@@ -43,6 +43,11 @@
 </head>
 
 <body>
+    <!-- theme btn -->
+    <div class="theme-container shadow-dark">
+        <!-- Moon icon using Font Awesome -->
+        <i id="theme-icon" class="fas fa-sun" style="color: #f1c40f;"></i>
+      </div>
     <!-- Spinner Start -->
     <div id="spinner" class="show bg-white position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
         <div class="spinner-grow text-primary" style="width: 3rem; height: 3rem;" role="status">
@@ -617,6 +622,8 @@
 
     <!-- Template Javascript -->
     <script src="js/main.js"></script>
+    <script src="js/theme switcher.js"></script>
+
 </body>
 
 </html>
